[package]
name = "local_thread"
version = "0.1.0"
edition = "2021"
description = "A local thread management library for Rust. No more 'static functions in order to start threads!"
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false